--- a/example.bib
+++ b/example.bib
@@ -790,14 +790,6 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
     volume = {94},
     pages = {046102}
 }
-@ARTICLE{TianCS09,
-    author = {C. S. Tian and Y. R. Shen},
-    title = {{Isotopic Dilution Study of the Water/Vapor Interface by Phase-Sensitve Sum-Frequency Vibrational Spectroscopy}},
-    journal = {J. Am. Chem. Soc.},
-    year = {2009},
-    volume = {131},
-    pages = {2790}
-}
 @ARTICLE{CAM08,
     author = {C. A. Marx and U. Harbola and S. Mukamel},
     title = {{Nonlinear Optical Spectroscopy of Single, Few, and Many Molecules: Nonequilibrium Green's Function QED Approach}},
@@ -1145,7 +1137,7 @@ URL = {https://doi.org/10.1063/1.464521},
     volume = {2},
     doi = {10.1021/jz200791c},
     url = {https://pubs.acs.org/doi/abs/10.1021/jz200791c},
-    pages = {1946}
+    pages = {1946--1949}
 }
 @ARTICLE{Jungwirth2001,
     author = {P. Jungwirth and D. J. Tobias},
@@ -3117,8 +3109,8 @@ URL = {https://doi.org/10.1063/5.0007045}
     journal = {J. Am. Chem. Soc.},
     year = {2009},
     volume = {131},
-    doi = {},
-    url = {},
+    doi = {10.1021/ja809497y},
+    url = {https://doi.org/10.1021/ja809497y},
     pages = {2790}
 }
 @ARTICLE{SAC04,
@@ -4901,14 +4893,6 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     volume = {130},
     pages = {2271}
 }
-@ARTICLE{TianCS09,
-    author = {C. S. Tian and Y. R. Shen},
-    title = {{Isotopic Dilution Study of the Water/Vapor Interface by Phase-Sensitve Sum-Frequency Vibrational Spectroscopy}},
-    journal = {J. Am. Chem. Soc.},
-    year = {2009},
-    volume = {131},
-    pages = {2790}
-}
 @ARTICLE{CAM08,
     author = {C. A. Marx and U. Harbola and S. Mukamel},
     title = {{Nonlinear Optical Spectroscopy of Single, Few, and Many Molecules: Nonequilibrium Green's Function QED Approach}},
@@ -4993,6 +4977,8 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     journal = {J. Am. Chem. Soc},
     year = {2008},
     volume = {130},
+    doi = {10.1021/ja8021297},
+    url = {https://doi.org/10.1021/ja8021297},
     pages = {13033}
 }
 @ARTICLE{Irwin88,
@@ -6634,14 +6620,6 @@ year = {1984}
     volume = {133},
     pages = {16875--16880}
 }
-@ARTICLE{TianCS09,
-    author = {C. S. Tian and Y. R. Shen},
-    title = {{Isotopic Dilution Study of the Water/Vapor Interface by Phase-Sensitve Sum-Frequency Vibrational Spectroscopy}},
-    journal = {J. Am. Chem. Soc.},
-    year = {2009},
-    volume = {131},
-    pages = {2790}
-}
 @ARTICLE{SAC04,
     author = {S. A. Corcelli and  C. P. Lawrence and J. L. Skinner},
     title = {{Combined electronic structrue/molecular dynamics approach for ultrafast infrared spectroscopy of dilute HOD
@@ -8162,17 +8140,6 @@ year="2007",
 publisher="",
 volume="129",
 pages="10056-10057 ",
-url=""
-}
-@Article{TianChuanshan2011,
-author="Chuanshan Tian and Steven J. Byrnes and Hui-Ling Han and Y. Ron Shen",
-title="Surface Propensities of Atmospherically Relevant Ions in Salt
-Solutions Revealed by Phase-Sensitive Sum Frequency Vibrational Spectroscopy",
-journal="J. Phys. Chem. Lett.",
-year="2011",
-publisher="",
-volume="2",
-pages="1946-1949 ",
 url=""
 }
 @Article{Lisy-jcp2011,
