--- a/main.tex
+++ b/main.tex
@@ -436,7 +436,7 @@ I have benefited a lot from his wonderful teaching methods, exercises, and quest
 I thank Prof. Thomas Record Jr. in University of Wisconsin and Prof. Marie-Pierre Gaigeot in Universit{\'e} Pierre et Marie Curie for useful discussions.
 
 %
-I am grateful to R\'emi Khatib for helpful guidance on the programs for calculating the VSFG spectra. I thank Shuanhu Qi, Jiajia Zhou and Fei Yu for useful discussions. 
+I am grateful to R\'emi Khatib for helpful guidance on the programs for calculating the VSFG spectra. I thank Dr. Qi Shuanhu, Dr. Zhou Jiajia and Dr. Yu Fei for useful discussions. 
 I would like to thank Leila Salimi, Isidro Lorenzo Geada, Santosh Kumar Meena and Anusha Lalitha, 
 at the Institute for Physics, for their assistance.
 %
@@ -445,26 +445,25 @@ I thank Astrid Chase, Andreas Nussbaumer and Daniela Reibel for their enthusiast
 %
 The financial supports of the China Scholarship Council and TRR146 are gratefully acknowledged.
 
+%
+I thank Prof. Luo Honggang, Prof. Fang Haiping and Prof. Zhou Haijun for their great help in my study during my doctoral studies. 
+The cooperation and discussions with Dr. Shi Guosheng, Dr. Shao Junming, Dr. Zhou Bo and Dr. Wang Chunlei have benefited me a lot. 
 
 %
-I thank Prof. Honggang Luo, Prof. Haiping Fang and Prof. Haijun Zhou for their great help in my study during my doctoral studies. 
-The cooperation and discussions with Dr. Guosheng Shi, Dr. Junming Shao, Dr. Bo Zhou and Dr. Chunlei Wang have benefited me a lot. 
-
-%
-I thank Prof. Yuliang Jin for his support, trust and teachings over the past year.
+I thank Prof. Jin Yuliang for his support, trust and teachings over the past year.
 
 %
 I would like to thank the following teachers who have benefited me for life:
-Mr. Yiyou Li, Mr. Yongliang Lu,  
-Mr. Bing Yang, Mr. Jiexian Chen, Mr. Yiji Li, Mr. Jiangen Chen, Mr. Jian Liang, Mr. Zengquan Jiang, 
-Mr. Xiukui Wu, Mr. Wende Zhou, Mr. Wenfeng Chen, 
-Mr. Zhengzhou Yan, Mr. Pingchuan Xu, Ms. Ruibin Huang, Ms. Qiyin Ran, Mr. Yong Huang, Mr. Zhiquan Luo, Mr. Silin Fan, Mr. Caide Tao, Mr. Weiping Li,
-Mr. Lei Tan, Mr. Yuxiao Liu, Mr. Honggang Luo.
+Mr. Li Yiyou, Mr. Lu Yongliang,  
+Mr. Yang Bing, Mr. Chen Jiexian, Mr. Li Yiji, Mr. Chen Jiangen, 
+Mr. Wu Xiukui, Mr. Zhou Wende, Mr. Chen Wenfeng, 
+Mr. Yan Zhengzhou, Mr. Xu Pingchuan, Ms. Huang Ruibin, Ms. Ran Qiyin, Mr. Huang Yong, Mr. Luo Zhiquan, Mr. Fan Silin, Mr. Tao Caide, Mr. Li Weiping,
+Mr. Tan Lei, Mr. Liu Yuxiao, Mr. Luo Honggang.
 
 %
-I am grateful to my dear parents Yuhua Diao and Dehuai Huang, and my dear brother Jialiang, for their care, 
+I am grateful to my dear parents Diao Yuhua and Huang Dehuai, and my dear brother Jialiang, for their care, 
 understanding and support for me for decades. 
-This thesis is dedicated to my dear grandmother Yuqing Zhong, the late grandparents Zongyin Huang, Sufang Ma, and Shengwen Diao. 
+This thesis is dedicated to my dear grandmother Zhong Yuqing, the late grandparents Huang Zongyin, Ma Sufang, and Diao Shengwen. 
 I will always remember the kindness, open-mindedness, diligence and perseverance that grows deep in their hearts.
 
 \end{acknowledgements}
@@ -622,7 +621,7 @@ $g_z(\nu)$ & projected VDOS for selected atoms along $z$-axis &  \\
 $g_{\text{A--B}}$ & radial distribution function & \\
 $k$ & rate constant of breaking a HB & \\
 $k'$ & rate constant of reforming a HB & \\
-$r_\text{X}$ & ratio of number of X to the number of H$_2$O among neighbors of a water molecule& \\
+$r_\text{X}$ & ratio of number of X to that of H$_2$O among neighbors of a water molecule& \\
 $\theta_{\text{SFG}}$ & reflected angle of SFG beam w.r.t. the normal direction in the medium  & \\ 
 $k(t)$ & reactive flux & \\
 $\tau_{\text{R}}$ & relaxation time of HB population operator correlation function & \\
