--- a/main.tex
+++ b/main.tex
@@ -431,12 +431,11 @@ physics for leading me to the fundamental statistical physics and excellent lect
 %
 I thank Prof. Dr. Harvey Meyer at the institute for nuclear physics. 
 I feel very honored to be a teaching assistant in his quantum field theory course. 
-I have benefited a lot from his wonderful teaching methods, exercises, and questions and answers with students in his class.
 %
-I thank Prof. Thomas Record Jr. in University of Wisconsin and Prof. Marie-Pierre Gaigeot in Universit{\'e} Pierre et Marie Curie for useful discussions.
+%I thank Prof. Thomas Record Jr. in University of Wisconsin and Prof. Marie-Pierre Gaigeot in Universit{\'e} Pierre et Marie Curie for useful discussions.
 
 %
-I am grateful to R\'emi Khatib for helpful guidance on the programs for calculating the VSFG spectra. I thank Dr. Qi Shuanhu, Dr. Zhou Jiajia and Dr. Yu Fei for useful discussions. 
+I am grateful to R\'emi Khatib for helpful guidance on the programs for calculating the VSFG spectra. I thank Qi Shuanhu, Zhou Jiajia and Yu Fei for useful discussions. 
 I would like to thank Leila Salimi, Isidro Lorenzo Geada, Santosh Kumar Meena and Anusha Lalitha, 
 at the Institute for Physics, for their assistance.
 %
@@ -447,24 +446,23 @@ The financial supports of the China Scholarship Council and TRR146 are gratefull
 
 %
 I thank Prof. Luo Honggang, Prof. Fang Haiping and Prof. Zhou Haijun for their great help in my study during my doctoral studies. 
-The cooperation and discussions with Dr. Shi Guosheng, Dr. Shao Junming, Dr. Zhou Bo and Dr. Wang Chunlei have benefited me a lot. 
+The cooperation and discussions with Shi Guosheng, Shao Junming, Zhou Bo and Wang Chunlei have benefited me a lot. 
 
 %
 I thank Prof. Jin Yuliang for his support, trust and teachings over the past year.
 
 %
 I would like to thank the following teachers who have benefited me for life:
-Mr. Li Yiyou, Mr. Lu Yongliang,  
-Mr. Yang Bing, Mr. Chen Jiexian, Mr. Li Yiji, Mr. Chen Jiangen, 
-Mr. Wu Xiukui, Mr. Zhou Wende, Mr. Chen Wenfeng, 
-Mr. Yan Zhengzhou, Mr. Xu Pingchuan, Ms. Huang Ruibin, Ms. Ran Qiyin, Mr. Huang Yong, Mr. Luo Zhiquan, Mr. Fan Silin, Mr. Tao Caide, Mr. Li Weiping,
-Mr. Tan Lei, Mr. Liu Yuxiao, Mr. Luo Honggang.
+Mr. Lu Yongliang,  
+Mr. Yang Bing, Mr. Chen Jiexian, Mr. Chen Jiangen, 
+Mr. Wu Xiukui, Mr. Yan Zhengzhou, Ms. Ran Qiyin, Mr. Luo Zhiquan, Mr. Fan Silin, Mr. Tao Caide,
+Mr. Tan Lei, Mr. Liu Yuxiao.
 
 %
-I am grateful to my dear parents Diao Yuhua and Huang Dehuai, and my dear brother Jialiang, for their care, 
+I am grateful to my parents Diao Yuhua and Huang Dehuai, and my brother Jialiang, for their care, 
 understanding and support for me for decades. 
-This thesis is dedicated to my dear grandmother Zhong Yuqing, the late grandparents Huang Zongyin, Ma Sufang, and Diao Shengwen. 
-I will always remember the kindness, open-mindedness, diligence and perseverance that grows deep in their hearts.
+This thesis is dedicated to my grandparents Zhong Yuqing, Diao Shengwen, Ma Sufang, and Huang Zongyin. 
+I will always remember the kindness, open-mindedness, diligence and perseverance.
 
 \end{acknowledgements}
 
