--- a/main.tex
+++ b/main.tex
@@ -330,16 +330,13 @@ Wässrige Nitratlösungen von \abinitio Molecular Dynamics} % Your thesis title,
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
 The interfacial structure and dynamics of solutions containing alkaline nitrates have been studied by density functional theory-based 
 molecular dynamics (DFTMD) simulations. In particular we have presented a detailed analysis of the hydrogen bond (HB) structure at the interface and 
-have calculated the interface vibrational spectra to provide a molecular interpretation of available experimental data.
-When calculating the vibrational sum-frequency generation (VSFG) spectrum, 
-an approximation was used such that we can obtained the interface's nonlinear polarizability to 
-infrared incident light through the velocity auto-correlation function (VACF). 
+have calculated the interface vibrational sum-frequency generation (VSFG) spectra to provide a molecular interpretation of available experimental data.
 Based on the calculation of the maximally-localized Wannier functions (MLWFs), the parameterization of the spatial gradient of the components of the dipole moment 
 and the polarization is realized. Therefore, the calculation of the correlation between the dipole moment and the polarization is 
-transformed into the calculation of the VACF.
+transformed into the calculation of the velocity auto-correlation function (VACF).
 
 %
-As a first system we have analyzed the behaviour of an aqueous interface containing LiNO$_3$.
+We have analyzed the behaviour of an aqueous interface containing LiNO$_3$.
 Both the measured and calculated VSFG spectra shows a reduced intensity in the lower frequency portion,
 when compared to the water/vapor interface.
 This reduction is attributed to the hydrogen (H-) bonds established between the \nitrate and the surrounding water molecules at the interface.
@@ -355,18 +352,18 @@ The origin of the characteristics comes from a unique distribution of \I ions an
 which form a double layer over the thickness on the order of 5--10 \A.
 
 %
-For the bulk and the interfacial systems,we calculated the correlation functions of the HB population, 
-and obtained the reaction rate constants with the HB formation and breakage. 
+%For the bulk and the interfacial systems,we calculated the correlation functions of the HB population, 
+%and obtained the reaction rate constants with the HB formation and breakage. 
 To analyze the HB dynamics at interfaces, 
 we determined the Willard-Chandler instantaneous interface based on spatial density, 
 and proposed a statistical scheme based on the interfacial HB (IHB) population operator for the instantaneous interface.
-Combining this method with Interfacial Molecule Sampling (IMS), we can get more realistic HB dynamics for the water/vapor interface.
+Combining this method with Interfacial Molecule Sampling (IMS), we have obtained more realistic HB dynamics for the water/vapor interface.
 This combination gives us a method to determine the thickness of the water/vapor interface from the perspective
 of HB dynamics.
 
 %
 The IHB method is also extended to general interface systems, such as the solvation shells of ions in aqueous solutions.
-The difference between the HB dynamics in the first solvation shell of \Li and that of nitrate-water Hydrogen (H-) bonds
+The difference between the HB dynamics in the first solvation shell of \Li and that of nitrate-water Hydrogen bonds
 at interfaces is not visible from the values of the HB relaxation time. 
 For the interface of alkaline iodide solutions, we find that the cations does not alter the H-bonding network 
 outside the first solvation shell of the cations themselves.
@@ -386,25 +383,26 @@ molecules and the $\Im \chi^{(2)}$ spectrum of the alkaline nitrate interface.
 {\selectlanguage{ngerman}
 \begin{extraAbstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-Die Grenzflächenstruktur und -dynamik von Lösungen, die alkalische Nitrate enthalten, wurden durch Simulationen der auf Dichtefunktionaltheorie basierenden Molekulardynamik (DFTMD) untersucht. Insbesondere haben wir eine detaillierte Analyse der Wasserstoffbrücken(HB)-Struktur an der Grenzfläche vorgelegt und die Schwingungsspektren der Grenzfläche berechnet, um eine molekulare Interpretation der verfügbaren experimentellen Daten zu ermöglichen.
-
-Bei der Berechnung des Spektrums der Schwingungs-Summe-Frequenz-Generierung (VSFG) wurde eine Näherung verwendet, so dass wir die nichtlineare Polarisierbarkeit der Grenzfläche für infrarotes einfallendes Licht durch die Velocity Auto-Correlation Function (VACF) erhalten können. Basierend auf der Berechnung der Maximally-Localized Wannier Functions (MLWFs) erfolgt die Parametrisierung des räumlichen Gradienten der Komponenten des Dipolmoments und der Polarisation. Daher wird die Berechnung der Korrelation zwischen Dipolmoment und Polarisation in die Berechnung des VACF überführt.
-
-%
-Als erstes System haben wir das Verhalten einer wässrigen Grenzfläche mit LiNO$_3$ analysiert. Sowohl die gemessenen als auch die berechneten VSFG-Spektren zeigen eine reduzierte Intensität im unteren Frequenzbereich,
-im Vergleich zur Wasser/Dampf-Grenzfläche. Diese Reduktion wird den Wasserstoff-(H-)-Bindungen zugeschrieben, die zwischen dem Nitrat und den umgebenden Wassermolekülen an der Grenzfläche aufgebaut werden. Dieser Effekt hängt nur mit der Anwesenheit des Nitrats an der Wasseroberfläche zusammen und wird durch die Anwesenheit von Alkalimetallionen nicht beeinflusst. Wir haben gezeigt, dass die Verwendung einfacher Modelle, wie z. B. kleiner Cluster, nicht geeignet ist, die experimentellen Spektren zu reproduzieren und eine mikroskopische Interpretation der Spektren nicht liefern kann. Realistische Modelle der Grenzfläche sind erforderlich, um die Störung des Ions an der Wasseroberfläche zu berücksichtigen.
+Die Grenzflächenstruktur und -dynamik von Lösungen, die alkalische Nitrate enthalten, wurden auf der Grundlage der Dichtefunktionaltheorie untersucht
+Molekulardynamik (DFTMD)-Simulationen. Insbesondere haben wir eine detaillierte Analyse der Wasserstoffbrücken(HB)-Struktur an der Grenzfläche vorgelegt und die Grenzflächenschwingung berechnet Summe-Frequenz-Generation (VSFG)-Spektren, um eine molekulare Interpretation der verfügbaren experimentellen Daten bereitzustellen. Basierend auf der Berechnung der maximal-lokalisierten Wannier-Funktionen (MLWFs) erfolgt die Parametrisierung des räumlichen Gradienten der Komponenten des Dipolmoments und der Polarisation. Daher wird die Berechnung der Korrelation zwischen Dipolmoment und Polarisation in die Berechnung der Geschwindigkeits-Autokorrelationsfunktion (VACF) umgewandelt.
 
 %
-Aus den Ergebnissen nichtlinearer Suszeptibilitäten schließen wir, dass Wassermoleküle an den Grenzflächen von LiI-, NaI- und KI-Lösungen im Vergleich zu denen an der Wasser/Dampf-Grenzfläche an schwächeren H-Brücken beteiligt sind. Der Ursprung der Eigenschaften liegt in einer einzigartigen Verteilung von Jodidionen und Alkalimetallkationen, die eine Doppelschicht über die Dicke in der Größenordnung von 5--10 Angström bilden.
+Wir haben das Verhalten einer wässrigen Grenzfläche mit LiNO3 analysiert. Sowohl die gemessenen als auch die berechneten VSFG-Spektren zeigen eine reduzierte Intensität im unteren Frequenzbereich im Vergleich zur Wasser/Dampf-Grenzfläche. Diese Reduktion wird den Wasserstoff-(H-)-Bindungen zugeschrieben, die zwischen dem \nitrate und den umgebenden Wassermolekülen an der Grenzfläche aufgebaut werden. Dieser Effekt hängt nur mit der Anwesenheit von \nitrate an der Wasseroberfläche zusammen und wird durch die Anwesenheit von Alkalimetallionen nicht beeinflusst. Wir haben gezeigt, dass die Verwendung einfacher Modelle, wie z. B. kleiner Cluster, nicht geeignet ist, die experimentellen Spektren zu reproduzieren und eine mikroskopische Interpretation der Spektren nicht liefern kann. Realistische Modelle der Grenzfläche sind erforderlich, um die Störung des Ions an der Wasseroberfläche zu berücksichtigen.
+
+Aus den Ergebnissen nichtlinearer Suszeptibilitäten schließen wir, dass Wassermoleküle an den Grenzflächen von LiI-, NaI- und KI-Lösungen im Vergleich zu denen an der Wasser/Dampf-Grenzfläche an schwächeren H-Brücken beteiligt sind. Der Ursprung der Eigenschaften liegt in einer einzigartigen Verteilung von \I-Ionen und Alkalimetallkationen,
+die eine Doppelschicht über die Dicke in der Größenordnung von 5-10 \A \ bilden.
 
 %
-Für das Volumen- und Grenzflächensystem berechneten wir die Korrelationsfunktionen der HB-Population und erhielten die Reaktionsgeschwindigkeitskonstanten mit HB-Bildung und -Bruch. Um die HB-Dynamik an Grenzflächen zu analysieren, haben wir die Willard-Chandler-Momentan-Grenzfläche basierend auf der räumlichen Dichte bestimmt und ein statistisches Schema basierend auf dem Grenzflächen-HB (IHB)-Populationsoperator für die momentane Grenzfläche vorgeschlagen. Durch die Kombination dieser Methode mit Interfacial Molecule Sampling (IMS) können wir eine realistischere HB-Dynamik für die Wasser/Dampf-Grenzfläche erhalten. Diese Bombination der beiden Methoden gibt uns eine Lösung für die Frage, wie dick die Wasser/Dampf-Grenzfläche aus Sicht der HB-Dynamik ist.
+%Für das Volumen- und Grenzflächensystem berechneten wir die Korrelationsfunktionen der HB-Population und erhielten die Reaktionsgeschwindigkeitskonstanten mit HB-Bildung und -Bruch.
+Um die HB-Dynamik an Grenzflächen zu analysieren, haben wir die Willard-Chandler-Momentan-Schnittstelle basierend auf der räumlichen Dichte bestimmt und ein statistisches Schema basierend auf dem Grenzflächen-HB (IHB)-Populationsoperator für die momentane Schnittstelle vorgeschlagen. Durch die Kombination dieser Methode mit Interfacial Molecule Sampling (IMS) haben wir eine realistischere HB-Dynamik für die Wasser/Dampf-Grenzfläche erhalten. Diese Kombination gibt uns eine Methode zur Bestimmung der Dicke der Wasser/Dampf-Grenzfläche aus Sicht der HB-Dynamik.
+
+Die IHB-Methode wird auch auf allgemeine Grenzflächensysteme, wie die Solvathüllen von Ionen in wässrigen Lösungen, erweitert. Der Unterschied zwischen der HB-Dynamik in der ersten Solvathülle von Li und der von Nitrat-Wasser-Wasserstoffbrücken an Grenzflächen ist aus den Werten der HB-Relaxationszeit nicht ersichtlich. Für die Grenzfläche von alkalischen Iodidlösungen stellen wir fest, dass die Kationen das H-Brückennetzwerk außerhalb der ersten Solvathülle der Kationen selbst nicht verändern.
+Durch die Solvatationsschalen-HB(SHB)-Dynamik haben wir erhalten, dass
+die HB-Dynamik für die H-Brücken zwischen Wassermolekülen in der ersten und zweiten Solvathülle ist nicht empfindlich gegenüber der Natur der Ionen.
+Im Gegensatz dazu wird die Umorientierungsdynamik für die Wassermoleküle in der ersten Solvathülle der Ionen durch die Ionen signifikant beeinflusst.
 
 %
-Die IHB-Methode wird auch auf allgemeine Grenzflächensysteme, wie die Solvathüllen von Ionen in wässrigen Lösungen, erweitert. Der Unterschied zwischen der HB-Dynamik in der ersten Solvathülle von \Li und der von Nitrat-Wasser-Wasserstoff-Bindungen an Grenzflächen ist aus den Werten der HB-Relaxationszeit nicht ersichtlich. Für die Grenzfläche von alkalischen Iodidlösungen stellen wir außerdem fest, dass die Kationen das H-Brückennetzwerk außerhalb der ersten Solvathülle der Kationen selbst nicht verändern. Durch die HB (SHB)-Dynamik der Solvathülle haben wir festgestellt, dass die HB-Dynamik für die H-Brücken zwischen Wassermolekülen in der ersten und zweiten Solvathülle nicht empfindlich auf die Natur der Ionen reagiert. Im Gegensatz dazu wird die Umorientierungsdynamik für die Wassermoleküle in der ersten Solvathülle der Ionen durch die Ionen signifikant beeinflusst.
-
-%
-Schließlich fördert die Verteilung der Anzahl von H-Brücken pro OH-Gruppe an einer gegebenen momentanen Grenzfläche unser Verständnis des Unterschieds zwischen der alkalischen Nitratlösung/Dampf und der Wasser/Dampf-Grenzfläche. Insbesondere das Verhältnis der freien OH-Bindungen für Grenzflächen beeinflusst die Zerfallsrate der Reorientierungsrelaxation von Wassermolekülen und das $\Im\chi^{(2)}$-Spektrum der Alkalinitrat-Grenzfläche.
+Schließlich fördert die Verteilung der Anzahl von H-Brücken pro OH-Gruppe an einer gegebenen momentanen Grenzfläche unser Verständnis des Unterschieds zwischen der alkalischen Nitratlösung/Dampf und der Wasser/Dampf-Grenzfläche. Insbesondere das Verhältnis der freien OH-Bindungen für Grenzflächen beeinflusst die Abklingrate der Reorientierungsrelaxation von Wassermolekülen und das $\Im \chi^{(2)}$-Spektrum der alkalischen Nitratgrenzfläche.
 
 \end{extraAbstract}
 }
@@ -454,8 +452,9 @@ I thank Prof. Jin Yuliang for his support, trust and teachings over the past yea
 %
 I would like to thank the following teachers who have benefited me for life:
 Mr. Lu Yongliang,  
-Mr. Yang Bing, Mr. Chen Jiexian, Mr. Chen Jiangen, 
-Mr. Wu Xiukui, Mr. Yan Zhengzhou, Ms. Ran Qiyin, Mr. Luo Zhiquan, Mr. Fan Silin, Mr. Tao Caide,
+Mr. Yang Bing, Mr. Chen Jiexian, Mr. Chen Jiangen, Mr. Li Yiji,
+Mr. Wu Xiukui, Mr. Chen Wenfeng, Mr. Liao Changchun, Mr. Zhou Wende,
+Mr. Yan Zhengzhou, Ms. Ran Qiyin, Mr. Luo Zhiquan, Mr. Fan Silin, Mr. Tao Caide,
 Mr. Tan Lei, Mr. Liu Yuxiao.
 
 %
@@ -500,7 +499,7 @@ I will always remember the kindness, open-mindedness, diligence and perseverance
 \textbf{H-} & \textbf{H}ydrogen\\
 \textbf{HB} & \textbf{H}ydrogen \textbf{B}ond\\
 \textbf{HK} & \textbf{H}ohenberg-\textbf{K}ohn\\
-\textbf{IHB} & \textbf{I}nterface \textbf{H}ydrogen \textbf{B}ond\\
+\textbf{IHB} & \textbf{I}nterfacial \textbf{H}ydrogen \textbf{B}ond\\
 \textbf{KS} & \textbf{K}ohn-\textbf{S}ham\\
 \textbf{LDA} & \textbf{L}ocal \textbf{D}ensity \textbf{A}pproximation\\
 \textbf{MD} & \textbf{M}olecular \textbf{D}ynamics\\
