--- a/example.bib
+++ b/example.bib
@@ -1,5 +1,5 @@
 @BOOK{Norvig2010,
-  title = {Artificial Intelligence: A modern approach},
+  title = {Artificial intelligence: A modern approach},
   publisher = {Pearson Education},
   year = {2010},
   author = {Norvig, P. and Russell, S. J.},
@@ -16,7 +16,7 @@
   address = {New York}
 }
 @BOOK{Starks1994,
-  title = {Phase Transfer Catalysis},
+  title = {Phase transfer catalysis},
   publisher = {Chapman \& Hall},
   year = {1994},
   author = {Starks, C. M. and Liotta, C. L. and  Halpern, M.},
@@ -44,7 +44,7 @@
   address = {Humphrey Milford, London}
 }
 @BOOK{Ball2001,
-  title = {Life's Matrix: A Biography of Water},
+  title = {Life's matrix: A biography of water},
   publisher = {University of California Press},
   year = {2001},
   author = {P. Ball},
@@ -60,21 +60,21 @@
 }
 @BOOK{Pimentel1960,
     author = {Pimentel, G. C. and MClellan, A. L.},
-    title = {The Hydrogen Bond},
+    title = {The hydrogen bond},
     publisher = {W. H. Freemann, San Francisco},
     year = {1960},
     isbn = {}
 }
 @BOOK{Fleming86,
     author = {G. R. Fleming},
-    title = {Chemical Applications of Ultrafast Spectroscopy},
+    title = {Chemical applications of ultrafast spectroscopy},
     publisher = {Oxford University Press, New York},
     year = {1986},
     isbn = {}
 }
 @BOOK{MTD,
     author = {M. T. Dove},
-    title = {{Introduction to Lattice Dynamics}},
+    title = {{Introduction to lattice dynamics}},
     year = {1993},
     publisher = {Cambridge: Cambridge University Press}
 }
@@ -86,18 +86,18 @@
 }
 @BOOK{FS2002,
     author = {D. Frenkel and B. Smit},
-    title = {{Understanding Molecular Simulation}},
+    title = {{Understanding molecular simulation}},
     publisher = {Computational Science Series (Academic Press), 2nd ed},
     year = {2002}
 }
 @BOOK{1995SM,
     author = {S. Mukamel},
-    title = {{Principles of Nonlinear Optical Spectroscopy}},
+    title = {{Principles of nonlinear optical spectroscopy}},
     publisher = {Oxford University Press, Oxford},
     year = {1995}
 }
 @BOOK{Sparks2018,
-  title = {Soil Physical Chemistry},
+  title = {Soil physical chemistry},
   publisher = {CRC Press},
   year = {2018},
   editor = {Donald L. Sparks},
@@ -106,21 +106,21 @@
   subtitle = {Kinetics of reaction in pure and mixed systems},
 }
 @BOOK{Wilson1955,
-  title = {Molecular Vibrations},
+  title = {Molecular vibrations},
   publisher = {McGraw-Hill Book Company, Inc.},
   year = {1955},
   author = {E. B. Wilson},
   address = {New York},
 }
 @BOOK{Morita2018,
-  title = {Theory of Sum Frequency Generation Spectroscopy},
+  title = {Theory of sum frequency generation spectroscopy},
   publisher = {Springer Nature Singapore Pte Ltd.},
   year = {2018},
   author = {A. Morita},
   address = {Singapore},
 }
 @INBOOK{Morita2018-page2,
-  title = {Theory of Sum Frequency Generation Spectroscopy},
+  title = {Theory of sum frequency generation spectroscopy},
   chapter = {1},
   pages = {2},
   publisher = {Springer Nature Singapore Pte Ltd.},
@@ -130,14 +130,14 @@
 }
 @BOOK{Hiemenz1997,
     author = {Hiemenz, Paul C. and Rajagopalan, Raj.},
-    title = {{Principles of Colloid and Surface Chemistry}},
+    title = {{Principles of colloid and surface chemistry}},
     edition ={3},
     year = {1997},
     publisher ={New York: Marcel Dekker, Inc,}
 } 
 @ARTICLE{Levy1979,
     author = {M. Levy},
-    title = {{Universal Variational Functionals of Electron Densities, First-Order Density Matrices, and Natural Spin-Orbitals and Solution of the v-Representability Problem}},
+    title = {{Universal variational functionals of electron densities, first-order density matrices, and natural spin-orbitals and solution of the v-representability problem}},
     journal = {Proc. Natl. Acad. Sci. USA.},
     year = {1979},
     volume = {76},
@@ -147,7 +147,7 @@
 }
 @ARTICLE{Omta2003,
     author = {A. W. Omta and M. F. Kropman and S. Woutersen and H. J. Bakker},
-    title = {{Negligible Effect of Ions on the Hydrogen-Bond Structure in Liquid Water}},
+    title = {{Negligible effect of ions on the hydrogen-bond structure in liquid water}},
     journal = {Science},
     year = {2003},
     volume = {301},
@@ -160,7 +160,6 @@
     author = {Seidl, A. and G{\"{o}}rling, A. and Vogl, P. and Majewski, J. and Levy, M.},
     doi = {10.1103/PhysRevB.53.3764},
     url = {https://journals.aps.org/prb/abstract/10.1103/PhysRevB.53.3764},
-    file = {:home/gang/Nutstore Files/Ref{\_}by{\_}name/S/Seidl1996.pdf:pdf},
     issn = {1550235X},
     journal = {Phys. Rev. B},
     number = {7},
@@ -171,7 +170,7 @@
 }
 @ARTICLE{Silvestrelli1999,
     author={P. L. Silvestrelli and M. Parrinello},
-    title={{Water Molecule Dipole in the Gas and in the Liquid Phase}},                                           
+    title={{Water molecule dipole in the gas and in the liquid phase}},                                           
     journal="Phys. Rev. Lett.",
     year={1999},
     volume={82},
@@ -181,7 +180,7 @@
     url = {https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.82.3308}
 }
 @article{Isaacs1999,
-  title = {Covalency of the Hydrogen Bond in Ice: A Direct X-Ray Measurement},
+  title = {Covalency of the hydrogen bond in ice: A direct X-ray measurement},
   author = {Isaacs, E. D. and Shukla, A. and Platzman, P. M. and Hamann, D. R. and Barbiellini, B. and Tulk, C. A.},
   journal = {Phys. Rev. Lett.},
   volume = {82},
@@ -194,7 +193,7 @@
 }
 @ARTICLE{Yamamoto2008,
     author = {S. Yamamoto and H. Bluhm and K. Andersson and G. Ketteler and H. Ogasawara and M. Salmeron and A. Nilsson},
-    title = {{In Situ X-ray Photoelectron Spectroscopy Studies of Water on Metals and Oxides at Ambient Conditions}},
+    title = {{In situ X-ray photoelectron spectroscopy studies of water on metals and oxides at ambient conditions}},
     journal = {J. Phys.: Condens. Matter},
     year = {2008},
     volume = {20},
@@ -205,7 +204,7 @@
 }
 @Article{Salmeron2009,
     author ={Salmeron, M. and Bluhm, H. and Tatarkhanov, M. and Ketteler, G. and Shimizu, T. K. and Mugarza, A. and Deng, Xingyi and Herranz, T. and Yamamoto, S. and Nilsson, A.},
-    title = {{Water Growth on Metals and Oxides: Binding, Dissociation and Role of Hydroxyl Groups}},
+    title = {{Water growth on metals and oxides: Binding, dissociation and role of hydroxyl groups}},
     journal = {Faraday Discuss.},
     year = {2009},
     volume = {141},
