--- a/main.tex
+++ b/main.tex
@@ -357,7 +357,7 @@ which form a double layer over the thickness on the order of 5--10 \A.
 To analyze the HB dynamics at interfaces, 
 we determined the Willard-Chandler instantaneous interface based on spatial density, 
 and proposed a statistical scheme based on the interfacial HB (IHB) population operator for the instantaneous interface.
-Combining this method with Interfacial Molecule Sampling (IMS), we have obtained more realistic HB dynamics for the water/vapor interface.
+Combining this method with interfacial molecule sampling (IMS), we have obtained more realistic HB dynamics for the water/vapor interface.
 This combination gives us a method to determine the thickness of the water/vapor interface from the perspective
 of HB dynamics.
 
